<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bad_apple</name>
  <version>1.0.0</version>
  <description>Bad Apple ASCII animation as a ROS2 topic.</description>
  <maintainer email="k.yavuzkurt1@gmail.com">Kadir Yavuz Kurt</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>ament_index_python</depend>
  <depend>Pillow</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
